Edit fixed position and add on logo position:fixed and z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body{
     border-bottom-style:  solid;
     height: 100px;
     width:100%;
-     
+    
 }
 
 .inside{
@@ -31,6 +31,7 @@ body{
 }
 
 .logo{
+    
    
     background-color: #4aaaa5;
     color: whitesmoke;
@@ -444,13 +445,15 @@ margin-right: -40px;
     .header{
        
         height: 180px;
-        position: fixed;
-        margin-top: -30px;
+        
     }
+
+
     
 
     .logo{
-        margin: 0;
+        z-index: 9999;
+        position: fixed;
         padding: 30px;
         width:100%;
         float:left;
@@ -462,16 +465,16 @@ margin-right: -40px;
     float: right;
     top:90px;
     left: 100px;
+  
     }
-     
      
     /* Home Page */
 
 
 .wrapper{
- 
+        
         margin:auto;
-        margin-top: 30px;
+        margin-top: 50px;
         margin-bottom: 200px;
         width: 580px;
         height: 860px;
@@ -508,7 +511,7 @@ p{
 
 .wrapperP{
     margin:auto;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 200px;
     width: 580px;
     height: 1460px;
